<resources>
    <string name="app_name">Moja Aplikacja</string>
    <string name="numer_telefonu">Numer Telefonu</string>
    <string name="adres_email">Adres Email</string>
    <string name="imi_i_nazwisko">Imię i Nazwisko</string>
    <string name="dodatki">Dodatki</string>
    <string name="zakup">Zakup</string>
    <string name="aplikacje_wykona_damian_kuberski">Aplikacje wykonał: Damian Kuberski</string>
    <string name="wr">Wróć</string>
    <string name="o_programie">O programie</string>
    <string name="zapami_taj_dane_do_logowania">Zapamiętaj dane do logowania</string>
    <string name="price">, cena: </string>s
    <string name="lista_zam_wie">Lista zamówień</string>
</resources>